A6.x and A7.x adapted tp each other

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -18,7 +18,7 @@
   <string name="send">Senden</string>
   <string name="save">Speichern</string>
   <string name="back">Zurück</string>
-  <string name="undoDeletePerson">Sind Sie sicher, dass Sie diese Person löschen möchten?</string>
-  <string name="undoAnswer">nein</string>
+  <string name="undoDeletePerson">Soll das Löschen der Person rückgäging gemacht werden?</string>
+  <string name="undoAnswer">Ja</string>
   <string name="app_name">RoomPeople</string>
 </resources>
